tests/badinc4.out
./badinc4.svx:3:10: error: Expecting string field
 *include ; comment
          ^
./badinc4.svx:4:9: error: Expecting string field
 *include
         ^
./badinc4.svx:6:12: error: Couldn't open file ""
 *include ""
            ^
./badinc4.svx:7:25: error: Missing "
 *include "not terminated
                         ^
./badinc4.svx:8:12: error: Couldn't open file "nonexistent_file"
 *include "nonexistent_file"
            ^~~~~~~~~~~~~~~~

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m

There were 0 warning(s) and 5 error(s) - no output files produced.
