tests/badinc4.svx
; pos=fail error=5
; The two lines below used to cause a segfault (fixed in 1.2.7)
*include ; comment
*include
; This caused a segfault too (fixed in 1.2.38)
*include ""
*include "not terminated
*include "nonexistent_file"
*fix 1 reference 0 0 0
